syntax = "proto3";

option csharp_namespace = "Analytics.BLL.ProtoBase";

package order;

service OrderStatistic {
  rpc CalculateRevenueStatistic (stream OrderData ) returns (OrderStatisticData);
}


message OrderData {
  double orderRevenue = 1;
}


message OrderStatisticData {
  double var = 1;
  double mean = 2;
  double deviation = 3;
}
